--- a/index.html
+++ b/index.html
@@ -385,6 +385,24 @@
 					});
 			}
 
+			function fadeSVG($el) {
+				// Get image DOM element
+				// the fragment svg will be insterted in the <object class="svgfragment"> container
+				$svg = $el.parent().siblings('object.svgfragment');
+
+				// Fade the image out, change source and fade in again
+				var fade = 0;
+				if ($svg[0].hasAttribute("fade"))
+					fade = $svg.attr('fade');
+
+    			// data attribute doesn't exist
+				if($svg.attr('data') != $el.data('src'))
+					$svg.fadeOut(fade, function() {
+						$svg.attr('data', $el.data('src'));
+						$svg.fadeIn(100);
+					});
+			}
+
 			Reveal.addEventListener('fragmentshown', function(event) {
 				// Get DOM element of current fragment
 				var $el = $(event.fragment);
@@ -393,6 +411,9 @@
 				// If yes: fade image with source of current element
 				if($el.hasClass('imgsrc'))
 					fadeImage($el);
+				
+				if($el.hasClass('svgsrc'))
+					fadeSVG($el);
 			});
 
 			Reveal.addEventListener('fragmenthidden', function(event) {
@@ -403,6 +424,10 @@
 				// If yes: fade image with source of previous element
 				if($el.hasClass('imgsrc')) {
 					fadeImage($el.prev());
+				}
+
+				if($el.hasClass('svgsrc')) {
+					fadeSVG($el.prev());
 				}
 			});
 		</script>
