--- a/5-numeric.html
+++ b/5-numeric.html
@@ -11,11 +11,9 @@
 			<li>Implementation & test case</li>
 		</ul>
 		<aside class="notes">
-			Je vais maintenant présenter le nouvel élément de poutre dicret développé au cours de ma thèse.
-			<hr>
 			Cet élément est construit directement à partir des équations de Kirchhoff telles que présentées dans la partie précédente, et qu'on aura discrétisées.
 			<hr>
-			Grâce à une cinématique que j'ai appelée bi-arc, il permet de rendre compte des sauts d'efforts internes lorsque le modèle est soumis à des charges concentrées ou à des sauts de propriétés materielles.
+			Grâce à une cinématique que j'ai appelée bi-arc, il permet de rendre compte des sauts d'efforts internes lorsque le modèle est soumis à des charges concentrées ou à des sauts de propriétés matérielles.
 			<hr>
 			Ce qui répond ainsi aux dernières limitations identifiées.
 		</aside>
@@ -51,9 +49,9 @@
 		<hr>
 		Les éléments de comparaison existant dans la littérature sont peu nombreux et portent essentiellement sur les aspects géométriques.
 		<hr>
-		Au cours de notre travail, nous avons donc fait un inventaire des définitions existantes. Nous avons étendues ces définitions aux extrémités des courbes, ce qui est essentiel pour la modélisations des conditions aux limites. 
+		Au cours de notre travail, nous avons fait un inventaire des définitions existantes. Nous avons étendues ces définitions aux extrémités des courbes, ce qui est essentiel pour la modélisations des conditions aux limites. 
 		<hr>
-		Nous avons proposé de les comparer par leur capacité à représenter l'énergie de flexion pour certaines formes d'équilibre typiques de tiges élastiques (le cercle et l'elastica)
+		Enfin, nous avons proposé de les comparer, par leur capacité à représenter l'énergie de flexion pour certaines formes typiques de tiges élastiques (le cercle et l'elastica)
 	</aside>
 </section>
 
@@ -158,15 +156,6 @@
 </section>
 
 
-<section class="plan center">
-	<strong>Discrete Tangent</strong>
-	<aside class="notes">
-		Nous allons voir maintenant comment la courbure par les sommets conduit naturellement à la définition du vecteur tangent à la courbe.
-		<hr>
-		Et comment réciproquement, en jouant sur l'orientation du vecteur tangent on peut modéliser une discontinuité de courbure locale au niveau d'un sommet en faisant apparaitre un bi-arc.
-	</aside>
-</section>
-
 
 <!-- 
 =============================================================================================== 
@@ -174,6 +163,14 @@
 =============================================================================================== 
 -->
 
+<section class="plan center">
+	<strong>Discrete Tangent</strong>
+	<aside class="notes">
+		Nous allons voir maintenant comment la courbure par les sommets conduit naturellement à la définition du vecteur tangent.
+		<hr>
+		Et comment réciproquement, en jouant sur l'orientation du vecteur tangent on peut modéliser une discontinuité de courbure locale au niveau d'un sommet en faisant apparaitre un bi-arc.
+	</aside>
+</section>
 
 <section class="">
 <h5 class="">Tangent Vector</h5>
@@ -291,13 +288,13 @@
 	<hr>
 	<img data-src="./img/eq/biarc_1.svg" width="70%">
 	<aside class="notes">
-		Les propriétés matérielles et de section sont supposées uniformes sur chaque segment mais peuvent diférrer d'un segment à l'autre.
+		Les propriétés matérielles et de section sont supposées uniformes sur chaque segment mais peuvent différer d'un segment à l'autre.
 		<hr>
-		Les segments peuvent subir un chargement distribué uniforme ...
+		Les segments peuvent subir des chargement distribué ...
 		<hr>
-		alors que les noeuds poignée peuvent subir des efforts concentrés.
+		Les noeuds poignée peuvent subir des efforts concentrés mais pas les noeuds fantomes.
 		<hr>
-		Cette représentation permet une définition rigoureuse de l'ensemble des paramétres descriptifs tout en respectant leur nature propre ...
+		Cette représentation permet une définition rigoureuse de l'ensemble des paramétres descriptifs, tout en respectant leur nature propre ...
 		<hr>
 		C'est à dire que les grandeures locales sont définies aux noeuds, tandis que les grandeurs distribuées sont définies sur les arrêtes.
 	</aside>
